Mesh Bisect: add header info message for modal operation

Fixes T37700

Reviewed By: brecht

Differential Revision: https://developer.blender.org/D166